menambahkan app.css dan mempercantik view

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prayer Times</title>
+    <link rel="stylesheet" href="app.css" />
   </head>
   <body>
     <div id="app"></div>
+    <!-- Tambahkan link script ke app.js -->
+    <script src="app.js"></script>
   </body>
-  <script src="app.js"></script>
 </html>
